building_registration_form/styles.css
body {
    width: 100%;
    height: 100vh;
    margin: 0;
    background-color: #1b1b32;
    color: #f5f6f7;
    font-family: Tahoma;
    font-size: 16px;
}
  
h1, p {
    margin: 1em auto;
    text-align: center;
}

form {
    margin: 0 auto;
    max-width: 500px;
    min-width: 300px;
    width: 60vw;
    padding-bottom: 2em;
}
fieldset {
    border: none;
    padding: 2rem 0;
    border-bottom: 3px solid #3b3b4f;
}
fieldset:last-of-type {
    border-bottom: none;
}

label {
    display: block;
    margin: 0.5rem 0;
}
input, textarea, select {
    width: 100%;
    margin: 10px 0 0 0;
    min-height: 2em;
}
.inline {
    width: unset;
    margin: 0 0.5em 0 0;
    vertical-align: middle;
}
input, textarea {
    background-color: #0a0a23;
    border: 1px solid #0a0a23;
    color: #ffffff;
}
input[type="submit"] {
    display:block;
    width: 60vw;
    margin: 1em auto 1em auto;
    height: 2em;
    font-size: 1.1rem;
    background-color: #3b3b4f;
    border-color: white;
    min-width: 300px;
}
input[type="file"] {
    padding: 1px 2px;
}
a {
    color: #dfdfe2;
}
  

